# wtf-vm

./: CMakeLists.txt  main.cpp
src/: Binding.cpp  Binding.h  DataValue.cpp  DataValue.h  MachineInst.cpp  MachineInst.h  VirtualMachine.cpp  VirtualMachine.h  WtfException.cpp  WtfException.h
